refactor: simplify init container and add security context to run as root

--- a/charts/glassflow-operator/templates/deployment.yaml
+++ b/charts/glassflow-operator/templates/deployment.yaml
@@ -35,54 +35,53 @@ spec:
       {{- end }}
       {{- if not .Values.global.postgres_connection_url }}
       initContainers:
+        {{- if not .Values.global.postgres_connection_url }}
         - name: wait-for-postgres
-          image: postgres:{{ .Values.postgresql.image.tag | default "17-alpine" }}
-          imagePullPolicy: {{ .Values.postgresql.image.pullPolicy | default "IfNotPresent" }}
+          image: "busybox:1.35"
           command:
-            - /bin/sh
+            - sh
             - -c
             - |
-              set -e
               echo "Waiting for PostgreSQL to be ready..."
-
-              # Get connection details from secret
-              POSTGRES_HOST="${POSTGRES_HOST:-{{ .Release.Name }}-postgresql.{{ .Release.Namespace }}.svc.cluster.local}"
-              POSTGRES_PORT="${POSTGRES_PORT:-{{ .Values.postgresql.service.port | default 5432 }}}"
-              POSTGRES_USER="${POSTGRES_USER}"
-              POSTGRES_PASSWORD="${POSTGRES_PASSWORD}"
-              POSTGRES_ADMIN_DB="${POSTGRES_ADMIN_DB:-postgres}"
-
-              # Retry logic - check indefinitely until Postgres is ready
-              RETRY_DELAY=2
-              ATTEMPT=1
-
-              while true; do
-              echo "Attempt $ATTEMPT: Checking PostgreSQL connection..."
-              if PGPASSWORD="$POSTGRES_PASSWORD" pg_isready -h "$POSTGRES_HOST" -p "$POSTGRES_PORT" -U "$POSTGRES_USER" -d "$POSTGRES_ADMIN_DB" > /dev/null 2>&1; then
-              echo "PostgreSQL is ready!"
-              exit 0
-              fi
-              echo "PostgreSQL not ready yet, waiting ${RETRY_DELAY}s..."
-              sleep $RETRY_DELAY
-              ATTEMPT=$((ATTEMPT + 1))
+              until nc -z {{ .Release.Name }}-postgresql.{{ .Release.Namespace }}.svc.cluster.local 5432; do
+                echo "PostgreSQL not ready, waiting..."
+                sleep 2
               done
-          env:
-            - name: POSTGRES_HOST
-              value: "{{ .Release.Name }}-postgresql.{{ .Release.Namespace }}.svc.cluster.local"
-            - name: POSTGRES_PORT
-              value: "{{ .Values.postgresql.service.port | default 5432 | toString }}"
-            - name: POSTGRES_USER
-              valueFrom:
-                secretKeyRef:
-                  name: glassflow-postgresql
-                  key: username
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: glassflow-postgresql
-                  key: password
-            - name: POSTGRES_ADMIN_DB
-              value: "postgres"
+              echo "PostgreSQL is ready!"
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 65534
+        {{- end }}
+        {{- $natsAddress := .Values.global.nats.address | default (printf "nats://%s-nats.%s.svc.cluster.local:4222" .Release.Name .Release.Namespace) }}
+        - name: wait-for-nats
+          image: "busybox:1.35"
+          command:
+            - sh
+            - -c
+            - |
+              echo "Waiting for NATS to be ready..."
+              NATS_URL="{{ $natsAddress }}"
+              # Remove protocol prefix if present
+              NATS_HOST_PORT="${NATS_URL#nats://}"
+              NATS_HOST_PORT="${NATS_HOST_PORT#nats-secure://}"
+              # Extract host and port
+              if echo "$NATS_HOST_PORT" | grep -q ":"; then
+                NATS_HOST=$(echo "$NATS_HOST_PORT" | cut -d: -f1)
+                NATS_PORT=$(echo "$NATS_HOST_PORT" | cut -d: -f2)
+              else
+                NATS_HOST="$NATS_HOST_PORT"
+                NATS_PORT="4222"
+              fi
+              echo "Checking NATS at $NATS_HOST:$NATS_PORT..."
+              until nc -z "$NATS_HOST" "$NATS_PORT"; do
+                echo "NATS not ready, waiting..."
+                sleep 2
+              done
+              echo "NATS is ready!"
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 65534
+        {{- end }}
       containers:
       - args:
         - --leader-elect
