--- a/charts/glassflow-operator/templates/deployment.yaml
+++ b/charts/glassflow-operator/templates/deployment.yaml
@@ -33,8 +33,88 @@ spec:
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- if not .Values.global.postgres_connection_url }}
+      {{- if or (not .Values.global.postgres_connection_url) (and .Values.global.usageStats .Values.global.usageStats.enabled) }}
       initContainers:
+        {{- if and .Values.global.usageStats .Values.global.usageStats.enabled }}
+        - name: wait-for-tracking-secret
+          image: "curlimages/curl:latest"
+          command:
+            - sh
+            - -c
+            - |
+              # Try to install jq if not available (may fail on non-root, that's ok - we'll use fallback)
+              if ! command -v jq >/dev/null 2>&1; then
+                apk add --no-cache jq >/dev/null 2>&1 || echo "Warning: Could not install jq, will use fallback JSON parsing"
+              fi
+
+              SECRET_NAME="{{ .Release.Name }}-tracking-config"
+              NAMESPACE="{{ .Release.Namespace }}"
+              KUBE_API="https://kubernetes.default.svc"
+              TOKEN=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
+              CA_CERT="/var/run/secrets/kubernetes.io/serviceaccount/ca.crt"
+
+              echo "Waiting for tracking secret to be ready with installation_id..."
+              MAX_WAIT=300  # 5 minutes
+              ELAPSED=0
+              INTERVAL=2
+
+              while [ $ELAPSED -lt $MAX_WAIT ]; do
+                HTTP_CODE=$(curl -sS -o /dev/null -w "%{http_code}" --cacert "$CA_CERT" \
+                  -H "Authorization: Bearer $TOKEN" \
+                  "$KUBE_API/api/v1/namespaces/$NAMESPACE/secrets/$SECRET_NAME" 2>/dev/null || echo "000")
+
+                if [ "$HTTP_CODE" = "404" ]; then
+                  echo "Secret $SECRET_NAME does not exist yet (HTTP 404)... waiting (${ELAPSED}s/${MAX_WAIT}s)"
+                elif [ "$HTTP_CODE" = "200" ]; then
+                  SECRET_JSON=$(curl -sS --cacert "$CA_CERT" \
+                    -H "Authorization: Bearer $TOKEN" \
+                    "$KUBE_API/api/v1/namespaces/$NAMESPACE/secrets/$SECRET_NAME" 2>/dev/null || echo "{}")
+
+                  # Try to extract installation_id using jq if available, otherwise use python3
+                  if command -v jq >/dev/null 2>&1; then
+                    INSTALLATION_ID=$(echo "$SECRET_JSON" | jq -r '.data.installation_id // empty' | base64 -d 2>/dev/null || echo "")
+                  elif command -v python3 >/dev/null 2>&1; then
+                    # Fallback: use python3 to parse JSON
+                    INSTALLATION_ID_B64=$(echo "$SECRET_JSON" | python3 -c "import sys, json; print(json.load(sys.stdin).get('data', {}).get('installation_id', '') or '')" 2>/dev/null || echo "")
+                    if [ -n "$INSTALLATION_ID_B64" ]; then
+                      INSTALLATION_ID=$(echo "$INSTALLATION_ID_B64" | base64 -d 2>/dev/null || echo "")
+                    else
+                      INSTALLATION_ID=""
+                    fi
+                  else
+                    # Last resort: try grep/sed (less reliable)
+                    INSTALLATION_ID_B64=$(echo "$SECRET_JSON" | grep -o '"installation_id"[[:space:]]*:[[:space:]]*"[^"]*"' | sed 's/.*"installation_id"[[:space:]]*:[[:space:]]*"\([^"]*\)".*/\1/' | head -1)
+                    if [ -n "$INSTALLATION_ID_B64" ]; then
+                      INSTALLATION_ID=$(echo "$INSTALLATION_ID_B64" | base64 -d 2>/dev/null || echo "")
+                    else
+                      INSTALLATION_ID=""
+                    fi
+                  fi
+
+                  if [ -n "$INSTALLATION_ID" ] && [ "$INSTALLATION_ID" != "null" ] && [ "$INSTALLATION_ID" != "" ]; then
+                    echo "Tracking secret is ready with installation_id: ${INSTALLATION_ID:0:8}..."
+                    exit 0
+                  else
+                    echo "Secret exists but installation_id is empty... waiting (${ELAPSED}s/${MAX_WAIT}s)"
+                  fi
+                elif [ "$HTTP_CODE" = "403" ]; then
+                  echo "ERROR: Permission denied (HTTP 403) accessing secret $SECRET_NAME. Check RBAC permissions."
+                  exit 1
+                else
+                  echo "Warning: Unexpected HTTP code $HTTP_CODE when checking secret... waiting (${ELAPSED}s/${MAX_WAIT}s)"
+                fi
+
+                sleep $INTERVAL
+                ELAPSED=$((ELAPSED + INTERVAL))
+              done
+
+              echo "ERROR: Timeout waiting for tracking secret $SECRET_NAME with installation_id after ${MAX_WAIT}s"
+              echo "The pre-install hook may have failed to create the secret. Check the hook logs."
+              exit 1
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 65534
+        {{- end }}
         {{- if not .Values.global.postgres_connection_url }}
         - name: wait-for-postgres
           image: "busybox:1.35"
@@ -83,51 +163,76 @@ spec:
             runAsUser: 65534
         {{- end }}
       containers:
-      - args:
-        - --leader-elect
-        - --health-probe-bind-address=:8081        
-        command:
-        - /manager
-        envFrom:
-        - configMapRef:
-            name: glassflow-operator-config
-        env:
-        - name: POD_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
-        - name: POD_NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
+        - args:
+            - --leader-elect
+            - --health-probe-bind-address=:8081
+          command:
+            - /manager
+          envFrom:
+            - configMapRef:
+                name: glassflow-operator-config
+          env:
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
         {{- if .Values.global.postgres_connection_url }}
-        - name: GLASSFLOW_DATABASE_URL
-          value: {{ .Values.global.postgres_connection_url | quote }}
+            - name: GLASSFLOW_DATABASE_URL
+              value: {{ .Values.global.postgres_connection_url | quote }}
         {{- else }}
-        - name: GLASSFLOW_DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              name: glassflow-postgresql
-              key: connection-url
+            - name: GLASSFLOW_DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: glassflow-postgresql
+                  key: connection-url
         {{- end }}
-        image: "{{ .Values.global.imageRegistry | default "" }}{{ .Values.controllerManager.manager.image.repository }}:{{ .Values.controllerManager.manager.image.tag | default .Chart.AppVersion }}"
-        imagePullPolicy: {{ .Values.controllerManager.manager.image.pullPolicy }}
-        livenessProbe:
-          httpGet:
-            path: /healthz
-            port: 8081
-          initialDelaySeconds: 15
-          periodSeconds: 20
-        name: manager
-        readinessProbe:
-          httpGet:
-            path: /readyz
-            port: 8081
-          initialDelaySeconds: 5
-          periodSeconds: 10
-        resources: {{- toYaml .Values.controllerManager.manager.resources | nindent 10
+        {{- if and .Values.global.usageStats .Values.global.usageStats.enabled }}
+            - name: GLASSFLOW_TRACKING_ENABLED
+              value: "true"
+            - name: GLASSFLOW_TRACKING_ENDPOINT
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-tracking-config
+                  key: tracking_endpoint
+            - name: GLASSFLOW_TRACKING_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-tracking-config
+                  key: tracking_username
+            - name: GLASSFLOW_TRACKING_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-tracking-config
+                  key: tracking_password
+            - name: GLASSFLOW_TRACKING_INSTALLATION_ID
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-tracking-config
+                  key: installation_id
+                  optional: true
+        {{- end }}
+          image: "{{ .Values.global.imageRegistry | default "" }}{{ .Values.controllerManager.manager.image.repository }}:{{ .Values.controllerManager.manager.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.controllerManager.manager.image.pullPolicy }}
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8081
+            initialDelaySeconds: 15
+            periodSeconds: 20
+          name: manager
+          readinessProbe:
+            httpGet:
+              path: /readyz
+              port: 8081
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          resources: {{- toYaml .Values.controllerManager.manager.resources | nindent 10
           }}
-        securityContext: {{- toYaml .Values.controllerManager.manager.containerSecurityContext
+          securityContext: {{- toYaml .Values.controllerManager.manager.containerSecurityContext
           | nindent 10 }}
       securityContext: {{- toYaml .Values.controllerManager.podSecurityContext | nindent
         8 }}
