--- a/charts/glassflow-operator/templates/configmap.yaml
+++ b/charts/glassflow-operator/templates/configmap.yaml
@@ -43,6 +43,10 @@ data:
   SINK_IMAGE_TAG: {{ .Values.glassflowComponents.sink.image.tag | quote }}
   OPERATOR_IMAGE_TAG: {{ .Values.controllerManager.manager.image.tag | default .Chart.AppVersion | quote }}
   DEDUP_IMAGE_TAG: {{ .Values.glassflowComponents.dedup.image.tag | quote }}
+  INGESTOR_PULL_POLICY: {{ .Values.glassflowComponents.ingestor.image.pullPolicy | default "IfNotPresent" | quote }}
+  JOIN_PULL_POLICY: {{ .Values.glassflowComponents.join.image.pullPolicy | default "IfNotPresent" | quote }}
+  SINK_PULL_POLICY: {{ .Values.glassflowComponents.sink.image.pullPolicy | default "IfNotPresent" | quote }}
+  DEDUP_PULL_POLICY: {{ .Values.glassflowComponents.dedup.image.pullPolicy | default "IfNotPresent" | quote }}
   DEDUP_CPU_REQUEST: {{ .Values.glassflowComponents.dedup.resources.requests.cpu | quote }}
   DEDUP_CPU_LIMIT: {{ .Values.glassflowComponents.dedup.resources.limits.cpu | quote }}
   DEDUP_MEMORY_REQUEST: {{ .Values.glassflowComponents.dedup.resources.requests.memory | quote }}
