--- a/charts/glassflow-operator/templates/pipeline-crd.yaml
+++ b/charts/glassflow-operator/templates/pipeline-crd.yaml
@@ -39,6 +39,10 @@ spec:
             description: PipelineSpec defines the desired state of Pipeline.
             properties:
               config:
+                description: |-
+                  Config will be deprecated. Initial Pipeline configuration is now read from a Kubernetes Secret
+                  in the glassflow namespace (pipeline-config-{pipeline_id}). This field is kept for
+                  backward compatibility and will be used as a fallback if the secret is not found.
                 type: string
               dlq:
                 type: string
