--- a/config/crd/bases/etl.glassflow.io_pipelines.yaml
+++ b/config/crd/bases/etl.glassflow.io_pipelines.yaml
@@ -40,6 +40,10 @@ spec:
             description: PipelineSpec defines the desired state of Pipeline.
             properties:
               config:
+                description: |-
+                  Config is deprecated. Pipeline configuration is now stored in a Kubernetes Secret
+                  in the glassflow namespace (pipeline-config-{pipeline_id}). This field is kept for
+                  backward compatibility and will be used as a fallback if the secret is not found.
                 type: string
               dlq:
                 type: string
@@ -151,7 +155,6 @@ spec:
                 - type
                 type: object
             required:
-            - config
             - dlq
             - join
             - pipeline_id
