--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -29,12 +29,21 @@ jobs:
     uses: ./.github/workflows/build_binary.yml
 
   test-operator:
-    if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-build') }}
+    if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-build') && !contains(github.event.pull_request.labels.*.name, 'build-only') }}
     uses: ./.github/workflows/test-operator.yml
 
   build-operator-image:
     needs: [build-operator-binary, test-operator]
-    if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-build') }}
+    if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-build') && !contains(github.event.pull_request.labels.*.name, 'build-only') }}
+    uses: ./.github/workflows/build-image.yml
+    with:
+      push: true
+      pr_number: ${{ github.event.number }}
+    secrets: inherit
+
+  build-operator-image-build-only:
+    needs: [build-operator-binary]
+    if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-build') && contains(github.event.pull_request.labels.*.name, 'build-only') }}
     uses: ./.github/workflows/build-image.yml
     with:
       push: true
