--- a/charts/glassflow-operator/templates/manager-rbac.yaml
+++ b/charts/glassflow-operator/templates/manager-rbac.yaml
@@ -40,6 +40,16 @@ rules:
   - list
   - watch
 - apiGroups:
+  - ""
+  resources:
+  - services
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - watch
+- apiGroups:
   - apps
   resources:
   - deployments
